<resources>
    <string name="app_name">Frida Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="switch_true">是</string>
    <string name="switch_false">否</string>
    <string name="button_forward">前往</string>
    <string name="button_confirm">确认</string>
    <string name="button_cancel">取消</string>

    <string name="home_frida_status">Frida状态</string>
    <string name="home_frida_version">Frida版本：%s</string>
    <string name="home_device_type">设备型号：%s</string>
    <string name="home_system_version">系统版本：%s</string>
    <string name="home_root_permission">Root权限：%s</string>
    <string name="home_boot">开机启动：%s</string>
    <string name="home_abi">系统架构：%s</string>

    <string name="settings_boot_frida">是否开机启动Frida？</string>
    <string name="settings_frida_port">Frida端口号：</string>
    <string name="settings_bound_port">绑定端口</string>

    <string name="settings_install_frida">安装Frida：</string>
    <string name="settings_install_dialog_local">本地安装</string>
    <string name="settings_install_dialog_pick_file">选择文件</string>
    <string name="settings_install_dialog_online">在线安装</string>
    <string name="settings_install_dialog_online_version">版本号如：12.10.4</string>
    <string name="settings_install_dialog_online_version_desc">不填版本号将跳到列表页</string>

</resources>